# wolframalpha-plasmoid

./: .gitignore  CMakeLists.txt  README  README.md
package/: metadata.desktop
package/contents/ui/: main.qml
